# bob

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  bob.nix  default.nix  flake.nix  package.nix  shell.nix
.github/workflows/: ci.yml
crates/cc/: Cargo.toml
crates/cc/src/: hooks.rs  lib.rs  workspace.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: attrs.rs  backend.rs  cache.rs  drv.rs  executor.rs  graph.rs  lib.rs  overrides.rs  progress.rs  resolve.rs  rewrite.rs  scheduler.rs  worker.rs
crates/rust/: Cargo.toml
crates/rust/src/: hooks.rs  lib.rs  pipeline.rs  rustc_wrap.rs  workspace.rs
lib/: cc.nix
src/: attrs.rs  backend.rs  cache.rs  drv.rs  executor.rs  graph.rs  main.rs  overrides.rs  progress.rs  resolve.rs  rewrite.rs  rustc_wrap.rs  scheduler.rs  worker.rs
src/rust/: hooks.rs  mod.rs  pipeline.rs  workspace.rs
