[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/numtide/bob"

[workspace.dependencies]
blake3 = "1"
serde_json = "1"
libc = "0.2"
bob-core = { path = "crates/core" }
bob-rust = { path = "crates/rust" }
