[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.metadata.bob]
# bob.nix reads flake.lock for the nixpkgs/cargo-nix-plugin pins, so a lock
# bump must invalidate bob's nix-instantiate cache. bob.nix and Cargo.lock
# are always tracked; list anything else bob.nix imports here.
eval-inputs = ["flake.lock"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/numtide/bob"

[workspace.dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1", default-features = false, features = ["parse", "serde", "std"] }
libc = "0.2"
bob-core = { path = "crates/core" }
bob-rust = { path = "crates/rust" }
