[package]
name = "bob-core"
description = "Language-agnostic Nix .drv replay engine for bob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
libc.workspace = true
